--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>sudo remove root</title>
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
 </head>
@@ -47,12 +46,27 @@
     </div>
   </nav>
 
-  <div class="container-fluid">
-    <h1 class="page-header text-center" id="heading">Mark Zuckerberg is a lizard-man</h1>
-    <div class="jumbotron text-center">
-      <img src="images/zuck.jpg" alt="">
+  <h1 class="page-header text-center" id="heading">Mark Zuckerberg is a lizard-man</h1>
+    <div class="container">
+      <div class="row">
+      <div class="card col-sm" style="width: 18rem;">
+        <img src="images/zuck.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">It's True!</h5>
+          <p class="card-text">He's a menace to society and he should be dealt with at all cost, we must stop him</p>
+          <a href="#" class="btn btn-primary">No more Zuck</a>
+        </div>
+      </div>
+      <div class="card col-sm" style="width: 18rem;">
+        <img src="images/zuck2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Look at this son of a bitch</h5>
+          <p class="card-text">Look! He really is a lizard! We must do something, this monster is roaming about without a care!</p>
+          <a href="#" class="btn btn-primary">No more Zuck</a>
+        </div>
+      </div>
+      </div>
     </div>
-  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
